--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "pptx-rs"
-version = "0.1.0"
+name = "ppt-rs"
+version = "0.1.5"
 edition = "2024"
 authors = ["Ying Kit WONG"]
 description = "Create, read, and update PowerPoint 2007+ (.pptx) files."
 license = "Apache-2.0"
-repository = "https://github.com/yingkitw/pptx-rs"
+repository = "https://github.com/yingkitw/ppt-rs"
 keywords = ["powerpoint", "ppt", "pptx", "openxml", "office"]
 
 [dependencies]
@@ -26,7 +26,7 @@ clap = { version = "4.5", features = ["derive"] }
 insta = "1.34"
 
 [lib]
-name = "pptx_rs"
+name = "ppt_rs"
 path = "src/lib.rs"
 
 [[bin]]
