Update dependencies and enhance PPTX features in version 0.2.1
- Bump versions of several dependencies including `bumpalo`, `cc`, `icu_properties`, `insta`, `itoa`, `ppt-rs`, `rustix`, `ryu`, `schemars`, and `serde_json`.
- Introduce new features in `ppt-rs` for bullet styles and text enhancements, allowing for more flexible presentation formatting.
- Update README.md to reflect new capabilities, including bullet styles and text enhancements, with usage examples.
- Add new color palettes and font size presets to improve presentation aesthetics.
- Remove deprecated slide content handling to streamline the codebase.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "ppt-rs"
-version = "0.1.8"
+version = "0.2.1"
 edition = "2024"
 authors = ["Ying Kit WONG"]
-description = "Create, read, and update PowerPoint 2007+ (.pptx) files."
+description = "Create, read, and update PowerPoint 2007+ (.pptx) files with rich formatting, bullet styles, themes, and templates."
 license = "Apache-2.0"
 repository = "https://github.com/yingkitw/ppt-rs"
 keywords = ["powerpoint", "ppt", "pptx", "openxml", "office"]
+categories = ["document-generation", "parsing"]
+readme = "README.md"
 
 [dependencies]
 zip = "0.6"
